syntax = "proto3";

package notadd_module_cms;

message PlaceholderRequest { }

message StringDataResponse {
    int32 code = 1;
    string message = 2;
    string data = 3;
}

service ClassifyService {
    rpc AddClassify (CreateClassifyRequest) returns (StringDataResponse) { }
    rpc DelClassify (DelClassifyRequest) returns (StringDataResponse) { }
    rpc UpdateClassify (UpdateClassifyRequest) returns (StringDataResponse) { }
    rpc GetAllClassify (FindAllClassifyRequest) returns (FindAllClassifyResponse) { }
    rpc GetOneClassify (FindAllClassifyRequest) returns (FindOneClassifyResponse) { }
    rpc GetParentClassify (FindAllClassifyRequest) returns (FindAllClassifyResponse) { }
    rpc MobileArticles (MobileArticlesRequest) returns (StringDataResponse) { }
}

message CreateClassifyRequest {
    string name = 1;
    string alias = 2;
    UpdateClassify parent = 3;
    bool onlyChildrenArt = 4;
    repeated ClassifyItemInput = 5;
}

message ClassifyItemInput {
    string name = 1;
    string alias = 2;
    bool required = 3;
    int32 order = 4;
    int32 itemId = 5;
}

message UpdateClassify {
    int32 id = 1;
    string name = 2;
    string chainUrl = 3;
    UpdateClassify parent = 4;
}

message CmsResponse {
    int32 code = 1;
    string message = 2;
}

message DelClassifyRequest {
    int32 id = 1;
}

message UpdateClassifyRequest {
    int32 id = 1;
    string name = 2;
    string alias = 3;
    bool onlyChildrenArt = 4;
    UpdateClassify parent = 5;
}

message FindAllClassifyRequest {
    int32 id = 1;
}

message FindAllClassifyResponse {
    int32 code = 1;
    string message = 2;
    string data = 3;
}

message FindOneClassifyResponse {
    int32 code = 1;
    string message = 2;
    ClassifyData data = 3; 
}

message ClassifyData {
    int32 id = 1;
    string name = 2;
    string alias = 3;
    bool onlyChildrenArt = 4;
    repeated ClassifyData children = 5;
    ClassifyData parent = 6;
    repeated InfoItemData classifyItem = 7;
}

message InfoItemData {
    int32 id = 1;
    string type = 2;
    int32 order = 3;
    string name = 4;
    string explain = 5;
    string style = 6;
    string regular = 7;
    string info = 8;
}

message MobileArticlesRequest {
    int32 classifyId = 1;
    int32 newClassifyId = 2;
}

service MessageService {
    rpc CreateMessage(CreateMessageRequest) returns (StringDataResponse) { }
    rpc DeleteMessageByIds(DeleteMessageByIdRequest) returns (StringDataResponse) { }
    rpc GetAllMessage(GetAllMessageRequest) returns (GetAllMessageResponse) { }
}

message CreateMessageRequest {
    string content = 1;
    int32 owner = 2;
}

message DeleteMessageByIdRequest {
    repeated int32 id = 1;
}

message GetAllMessageRequest {
    int32 pageNumber = 1;
    int32 pageSize = 2;
    string startTime = 3;
    string endTime = 4;
}


message GetAllMessageResponse {
    int32 code = 1;
    string message = 2;
    repeated Mes data = 3;
    int32 total = 4;
}

message Mes {
    int32 id = 1;
    string content = 2;
    string createAt = 3;
    int32 owner = 4;
}

service UserMessageService {
    rpc GetMessageByUserId(GetMessageByUserIdRequest) returns (GetMessageByUserIdResponse) { }
    rpc ReadMessageById(ReadMessageByIdRequest) returns (StringDataResponse) { }
    rpc ReadAll(ReadAllRequest) returns (StringDataResponse) { }
    rpc GetMessageById(GetMessageByIdRequest) returns (GetMessageByIdResponse) { }
    rpc DelMessageByIds(delMessageByIdsRequest) returns (StringDataResponse) { }
}

message GetMessageByUserIdRequest {
    int32 pageNumber = 1;
    int32 pageSize = 2;
    int32 id = 3;
}

message GetMessageByUserIdResponse {
    int32 code = 1;
    string message = 2;
    repeated UserMes data = 3;
    int32 total = 4;
}

message UserMes {
    int32 id = 1;
    string content = 2;
    string createAt = 3;
    int32 owner = 4;
    bool state = 5;
}

message ReadMessageByIdRequest {
    int32 id = 1;
}

message ReadAllRequest {
    int32 id = 1;
}

message GetMessageByIdRequest {
    int32 id = 1;
}

message GetMessageByIdResponse {
    int32 code = 1;
    string message = 2;
    UserMes data = 3;
}

message delMessageByIdsRequest {
    repeated int32 id = 1;
}


service ArticleService {
    rpc CreateArticle(CreateArticleRequest) returns (StringDataResponse) { }
    rpc UpdateArticle(UpdateArticleRequest) returns (StringDataResponse) { }
    rpc RecycleArticleByIds(RecycleArticleRequest) returns (StringDataResponse) { }
    rpc DeleteArticleByIds(DeleteArticleRequest) returns (StringDataResponse) { }
    rpc RecoverArticleByIds(RecoverArticleRequest) returns (StringDataResponse) { }
    rpc AuditArticle(AuditArticleRequest) returns (StringDataResponse) { }
    rpc GetAllArticle(GetAllArticleRequest) returns (AllArticleResponse) { }
    rpc GetRecycleArticle(GetRecycleArticleRequest) returns (AllArticleResponse) { }
    rpc GetArticleById(GetArticleByIdRequest) returns (ArticleResponse) { }
    rpc GetCheckArticle(GetCheckArticleRequest) returns (AllArticleResponse) { }
}

message CreateArticleRequest {
    CreateArtInput createArtInput = 1;
    message CreateArtInput {
        string title = 1;
        int32 userId = 2;
        int32 classifyId = 3;
        string cover = 4;
        string abstract = 5;
        string content = 6;
        bool top = 7;
        string source = 8;
        string sourceUrl = 9;
        repeated CreateInfoKV infoKVs = 10;
    }
    
}

message CreateInfoKV {
    int32 key = 1;
    string value = 2;
}

message UpdateArticleRequest {
    int32 id = 1;
    UpdateArtInput updateArtInput = 2;
    message UpdateArtInput {
        string title = 1;
        int32 classifyId = 2;
        string sourceUrl = 3;
        string cover = 4;
        string abstract = 5;
        string content = 6;
        bool top = 7;
        string source = 8;
    }
}

message RecycleArticleRequest {
    repeated int32 ids = 1;
}

message DeleteArticleRequest {
    repeated int32 ids = 1;
}

message RecoverArticleRequest {
    repeated int32 ids = 1;
}

message AuditArticleRequest {
    repeated int32 ids = 1;
    int32 status = 2;
    string refuseReason = 3;
}

message GetAllArticleRequest {
    int32 classifyId = 1;
    string createdAt = 2;
    string title = 3;
    int32 pageNumber = 4;
    int32 pageSize = 5;
}

message AllArticleResponse {
    int32 code = 1;
    string message = 2;
    repeated ArtData data = 3;
    int32 total = 4;
}

message ArtData {
    int32 id = 1;
    string title = 2;
    string source = 3;
    int32 classifyId = 4;
    string sourceUrl = 5;
    bool top = 6;
    int32 views = 7;
    string cover = 8;
    string abstract = 9;
    string content = 10;
    int32 status = 11;
    string refuseReason = 12;
    bool recycling = 13;
    string createdAt = 14;
    int32 userId = 15;
    string username = 16;
    repeated ArtInfos artInfos = 17;
}

message ArtInfos {
    int32 id = 1;
    int32 relationId = 2;
    string value = 3;
}

message GetRecycleArticleRequest {
    int32 classifyId = 1;
    string createdAt = 2;
    string title = 3;
    int32 pageNumber = 4;
    int32 pageSize = 5;
}

message GetArticleByIdRequest {
    int32 id = 1;
}

message ArticleResponse {
    ArtData article = 1;
}

message GetCheckArticleRequest {
    int32 classifyId = 1;
    string createdAt = 2;
    string title = 3;
    int32 pageNumber = 4;
    int32 pageSize = 5;
}

service ItemService {
    rpc CreateItem(CreateItemRequest) returns (StringDataResponse) { }
    rpc UpdateItem(UpdateItemRequest) returns (StringDataResponse) { }
    rpc DeleteItem(DeleteItemRequest) returns (StringDataResponse) { }
}

message CreateItemRequest {
    CreateItemInput createItemInput = 1;
    message CreateItemInput {
        string name = 1;
        string explain = 2;
        string style = 3;
        string regular = 4;
        string info = 5;
    }
}

message UpdateItemRequest {
    UpdateItemInput updateItemInput = 1;
    message UpdateItemInput {
        int32 id = 1;
        string name = 2;
        string explain = 3;
        string style = 4;
        string regular = 5;
        string info = 6;
    }
}

message DeleteItemRequest {
    int32 id = 1;
}

service ClassifyItemService {
    rpc UpdateClassifyItem(UpdateClassifyItemRequest) returns (StringDataResponse) { }
    rpc DeleteClassifyItem(UpdateClassifyItemRequest) returns (StringDataResponse) { }
}

message UpdateClassifyItemRequest {
    int32 id = 1;
    string name = 2;
    string alias = 3;
    int32 order = 4;
    bool required = 5;
    int32 item = 6;
}

service PageSortService {
    rpc CreatePageSort(CreatePageSortRequest) returns (StringDataResponse) { }
    rpc UpdatePageSort(UpdatePageSortRequest) returns (StringDataResponse) { }
    rpc DeletePageSort(DeletePageSortRequest) returns (StringDataResponse) { }
    rpc GetAllPageSort (GetAllPageSortRequest) returns (GetAllPageSortResponse) { }
    rpc GetOnePageSort (GetOnePageSortRequest) returns (GetOnePageSortResponse) { }
}

message CreatePageSortRequest {
    CreatePageSortInput createPageSortInput = 1;
    message CreatePageSortInput {
        string name = 1;
        string alias = 2;
        UpdatePageSort parent = 3;
    }
}

message UpdatePageSort {
    int32 id = 1;
    string name = 2;
    string chainUrl = 3;
    UpdateClassify parent = 4;
}

message UpdatePageSortRequest {
    int32 id = 1;
    string name = 2;
    string alias = 3;
    UpdatePageSort parent = 4;
}

message DeletePageSortRequest {
    int32 id = 1;
}

message GetAllPageSortRequest {
    int32 pageNumber = 1;
    int32 pageSize = 2;
}

message GetAllPageSortResponse {
    int32 code = 1;
    string message = 2;
    repeated PageSort data = 3;
    int32 total = 4;
}

message PageSort {
    int32 id = 1;
    string name = 2;
    string alias = 3;
    repeated PageSort parent = 4;
    repeated PageSort children = 5;
}

message GetOnePageSortRequest {
    int32 id = 1;
}

message GetOnePageSortResponse {
    int32 code = 1;
    string message = 2;
    PageSort parent = 3;
}

service PageService {
    rpc CreatePage(CreatePageRequest) returns (StringDataResponse) { }
    rpc UpdatePage(UpdatePageRequest) returns (StringDataResponse) { }
    rpc DeletePage(DeletePageRequest) returns (StringDataResponse) { }
    rpc GetAllPage(GetAllPageRequest) returns (GetAllPageResponse) { }
    rpc GetOnePage(DeletePageRequest) returns (GetOnePageResponse) { }
}

message CreatePageRequest {
    string name = 1;
    string alias = 2;
    int32 pageSortId = 3;
    repeated ContentInput content = 4;
}

message ContentInput {
    string name = 1;
    string alias = 2;
    string value = 3;
}

message UpdatePageRequest {
    int32 id = 1;
    string name = 2;
    string alias = 3;
    repeated ContentInput content = 4;
    int32 pageSortId = 5;
}

message DeletePageRequest {
    int32 id = 1;
}
message GetAllPageRequest {
    int32 pageNumber = 1;
    int32 pageSize = 2;
    string name = 3;
}

message GetAllPageResponse {
    int32 code = 1;
    string message = 2;
    repeated OnePage data = 3;
    int32 total = 4;
}

message GetOnePageResponse {
    int32 code = 1;
    string message = 2;
    OnePage data = 3;
}

message OnePage {
    string name = 1;
    string alias = 2;
    int32 pageSortId = 3;
    repeated ContentInput content = 4;
}

service CommentService {
    rpc CreateComment(CreateCommentRequest) returns (StringDataResponse) { }
    rpc DeleteComment(DeleteCommentRequest) returns (StringDataResponse) { }
    rpc AuditComment(AuditCommmentRequest) returns (StringDataResponse) { }
    rpc GetAllComments(GetAllCommentsRequest) returns (GetAllCommentsResponse) { }
    rpc UpdateComment(UpdateCommentRequest) returns (StringDataResponse) { }
}

message CreateCommentRequest {
    string content = 1;
    int32 artId = 2;
    int32 userId = 3;
}

message DeleteCommentRequest {
    int32 id = 1;
}

message AuditCommmentRequest {
    int32 id = 1;
    int32 op = 2;
}

message GetAllCommentsRequest {
    int32 pageNumber = 1;
    int32 pageSize = 2;
    string content = 3;
    string artTitle = 4;
    int32 artId = 5;
    string username = 6;
    string stratIime = 7;
    string endTime = 8;
}

message GetAllCommentsResponse {
    int32 code = 1;
    string message = 2;
    int32 total = 3;
    repeated Comment data = 4;
    message Comment {
        int32 id = 1;
        string content = 2;
        string time = 3;
        int32 status = 4;
        int32 userId = 5;
        int32 article = 6;
    }
}

message UpdateCommentRequest {
    Comment comment = 1;
}

service CommentPropertiesService {
    rpc GetAllCommentProperties(PlaceholderRequest) returns (CommentPropertiesResponse) { }
    rpc UpdateCommentProperties(UpdateCommentPropertiesRequest) return (StringDataResponse) { }
}

message CommentPropertiesResponse {
    int32 code = 1;
    string message = 2;
    CommentProperties data = 3;
    message CommentProperties {
        int32 id = 1;
        bool enableComment = 2;
        bool needAudit = 3;
        bool enableStar = 4;
    }
}

message UpdateCommentPropertiesRequest {
    int32 id = 1;
    string name = 2;
}

service MessageBoardService {
    rpc CreateMessageBoard(CreateMessageBoardRequest) returns (StringDataResponse) { }
    rpc UpdateMessageBoard(UpdateMessageBoardRequest) returns (StringDataResponse) { }
    rpc DeleteMessageBoard(DeleteMessageBoardRequest) returns (StringDataResponse) { }
    rpc GetAllMessageBoard(GetAllMessageBoardRequest) returns (GetAllMessageBoardResponse) { }
    rpc GetOneMessageBoard(GetOneMessageBoardRequest) returns (GetOneMessageBoardResponse) { }
    rpc GetMessageBoardContent(GetMessageBoardContentRequest) returns (GetMessageBoardContentResponse) { }
}

message CreateMessageBoardRequest {
    CreateBoardInput board = 1;
}

message CreateBoardInput {
    string name = 1;
    string alias = 2;
    repeated BoardItemInput boardItem = 3;
    message BoardItemInput {
        string name = 1;
        string alias = 2;
        bool required = 3;
        int32 itemId = 4;
    }
}

message UpdateMessageBoardRequest {
    UpdateBoardInput board = 1;
    message UpdateBoardInput {
        int32 id = 1;
        string name = 2;
        string alias = 3;
    }
}

message DeleteMessageBoardRequest {
    int32 id = 1;
}

message GetAllMessageBoardRequest {
    int32 pageNumber = 1;
    int32 pageSize = 2;
}

message GetAllMessageBoardResponse {
    int32 code = 1;
    string message = 2;
    repeated AllBoard data = 3;
    message AllBoard {
        string name = 1;
        string alias = 2;
        string time = 3;
        int32 amount = 4;
    }
}

message GetOneMessageBoardRequest {
    int32 id = 1;
}

message GetOneMessageBoardResponse {
    int32 code = 1;
    string message = 2;
    OneBoard data = 3;
    message OneBoard {
        int32 id = 1;
        string name = 2;
        string alias = 3;
        repeated InfoItemData item = 4;
    }
}

message GetMessageBoardContentRequest {
    int32 id = 1;
    int32 pageNumber = 2;
    int32 pageSize = 3;
}

message GetMessageBoardContentResponse {
    int32 code = 1;
    string message = 2;
    int32 total = 3;
    repeated MessageBoardContent data= 4;
    message MessageBoardContent {
        int32 id = 1;
        int32 userId = 2;
        repeated ArtInfos artInfos = 3;
    }
}

service LeavewordService {
    rpc CreateLeaveword(CreateLeavewordRequest) returns (StringDataResponse) { }
    rpc DeleteLeaveword(DeleteLeavewordRequest) returns (StringDataResponse) { }
}

message CreateLeavewordRequest {
    CreateLeavewordInput createLeavewordInput = 1;
    message CreateLeavewordInput {
        int32 userId = 1;
        int32 messageBoardId = 2;
        repeated CreateInfoKV infoKVs = 3;
    }
}

message DeleteLeavewordRequest {
    int32 id = 1;
}

service BoardItemService {
    rpc UpdateBoardItem(UpdateBoardItemRequest) returns (StringDataResponse) { }
    rpc DeleteBoardItem(DeleteBoardItemRequest) returns (StringDataResponse) { }
} 

message UpdateBoardItemRequest {
    int32 id = 1;
    string name = 2;
    string alias = 3;
    int32 item = 4;
    bool required = 5;
}